@@ -7,8 +7,11 @@
     # enable a normal wwwroot
     AliasMatch ^/www/?(.*) ##PHOCOA_APP_DIR##/wwwroot/www/$1
 
-    # enable normal www access to skins directory - WWWROOT for EACH SKIN WWWROOT in EACH SKIN DIR. Pieces are SkinType, SkinName, SkinThemeName, and path/to/resource
+    # enable www access to skin assets
     # security thought... can people ../../.. their way to trouble? Apache 2 at least seems to prevent this, but I am not sure how.
+    # skinTypeAssetsDir
+    AliasMatch ^/skins/([^/]*)/www/(.*) ##PHOCOA_APP_DIR##/skins/$1/www/$2
+    # skinSharedAssetsDir and skinThemeAssetsDir
     AliasMatch ^/skins/([^/]*)/([^/]*)/([^/]*)/(.*) ##PHOCOA_APP_DIR##/skins/$1/$2/www/$3/$4
 
     # show phpdoc documentation
